tests/baselines/reference/assignAnyToEveryType.errors.txt
assignAnyToEveryType.ts(37,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
assignAnyToEveryType.ts(41,1): error TS2631: Cannot assign to 'M' because it is a namespace.


==== assignAnyToEveryType.ts (2 errors) ====
    // all of these are valid
    
    var x: any;
    
    var a: number = x;
    var b: boolean = x;
    var c: string = x;
    var d: void = x;
    var e = null;
    e = x;
    var f = undefined;
    f = x;
    
    enum E {
        A
    }
    
    var g: E = x;
    var g2 = E.A;
    g2 = x;
    
    class C {
        foo: string;
    }
    
    var h: C = x;
    
    interface I {
        foo: string;
    }
    
    var i: I = x;
    
    var j: { (): string } = x;
    var j2: { <T>(x: T): string } = x;
    
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export var foo = 1;
    }
    
    M = x;
    ~
!!! error TS2631: Cannot assign to 'M' because it is a namespace.
    
    function k<T>(a: T) {
        a = x;
    }